# pytest-run-parallel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  RELEASE.md  cliff.toml  pyproject.toml  tox.ini
.github/workflows/: main.yml  pre-commit.yml  release.yml
docs/: conf.py  index.rst
src/pytest_run_parallel/: __init__.py  cpu_detection.py  plugin.py  redirect.py  thread_comparator.py  thread_unsafe_detection.py  thread_wrapper.py  utils.py
tests/: _helpers.py  conftest.py  test_cpu_detection.py  test_redirect.py  test_run_parallel.py  test_thread_comparator.py  test_thread_id.py  test_thread_index.py  test_thread_unsafe_detection.py  test_tmp_path.py
tests/testpkg/: README.md  gil_test.c  setup.py
