[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-run-parallel"
description = "A simple pytest plugin to run tests concurrently"
version = "0.7.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=6.2.0",
]

authors = [
    { name = "Edgar Margffoy" },
]
maintainers = [
    { name = "Lysandros Nikolaou", email = "lnikolaou@quansight.com" },
    { name = "Nathan Goldbaum", email = "ngoldbaum@quansight.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/Quansight-Labs/pytest-run-parallel"
[project.entry-points.pytest11]
run-parallel = "pytest_run_parallel.plugin"

[project.optional-dependencies]
psutil = [
    "psutil>=6.1.1",
]

[dependency-groups]
test = [
    "coverage[toml]>=7.8",
    "pytest-order",
    "pytest-xdist",
    "hypothesis>=6.135.33",
    "check-manifest",
]
dev = [
    { include-group = "test" },
    "pre-commit>=3.5.0",
    "ruff>=0.7.2",
]

[tool.ruff]
exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts="-W error -v"

[tool.coverage.run]
command_line = "-m pytest"
source_pkgs = ["pytest_run_parallel"]
source_dirs = ["tests"]
